# calculate-pi-app

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: tests.yml
app/: celery_app.py  main.py  settings.py
app/schemas/: __init__.py  calculation_request.py  calculation_response.py  progress_request.py  progress_response.py
app/tasks/: calculate_pi.py
tests/: conftest.py  test_calculate_pi_endpoint.py  test_check_progress_endpoint.py  test_general.py
