[project]
name = "calculate-pi-app"
version = "0.1.1"
description = "Asynchronous Pi calculation service with Celery"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
    "celery[redis]>=5.4.0",
    "mpmath>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.0",
]

[tool.ruff]
lint.extend-select = ["FAST"]
line-length = 79

[tool.ruff.lint.isort]
lines-after-imports = 2
